# Drawdown-Reduction

./: .env  .env.swo  .env.swp  .gitignore  README.md  config.yaml  config_ddr.yaml  copy_trade_example.py  main.py  metaApiSynchronizationExample.py  pyproject.toml  requirements.txt  run.sh
